@@ -2443,20 +2443,6 @@ Description: HSAIL runtime library (debug symbols)
 # These are versions of basic static libraries such as libgcc.a compiled
 # with the -msoft-float option, for CPUs without a floating-point unit.
 
-Package: fixincludes
-Architecture: any
-Priority: optional
-Depends: gcc-9-base (= ${gcc:Version}), gcc-9 (= ${gcc:Version}), ${shlibs:Depends}, ${misc:Depends}
-Description: Fix non-ANSI header files
- FixIncludes was created to fix non-ANSI system header files. Many
- system manufacturers supply proprietary headers that are not ANSI compliant.
- The GNU compilers cannot compile non-ANSI headers. Consequently, the
- FixIncludes shell script was written to fix the header files.
- .
- Not all packages with header files are installed on the system, when the
- package is built, so we make fixincludes available at build time of other
- packages, such that checking tools like lintian can make use of it.
-
 Package: gcc-9-offload-nvptx
 Architecture: amd64
 Priority: optional
