@@ -1,8 +1,0 @@
-#! /bin/sh
-
-PATH="/@LIBEXECDIR@/install-tools:$PATH"
-
-TARGET_MACHINE=`dpkg-architecture -qDEB_HOST_GNU_TYPE`
-export TARGET_MACHINE
-
-exec fixinc.sh "$@"
