@@ -859,9 +859,6 @@ endif
   ifneq (,$(neon_archs))
     addons += libneongcc libneongomp libneonitm libneonobjc libneongfortran libneoncxx
   endif
-  ifeq ($(with_fixincl),yes)
-    addons += $(if $(DEB_STAGE),,fixincl)
-  endif
   endif # DEB_CROSS
   ifeq ($(with_separate_libgo),yes)
     ifeq ($(PKGSOURCE),gcc-$(BASE_VERSION))
