@@ -1350,13 +1350,6 @@ else
       with_libqmath := yes
   endif
 
-  # fixincludes -------
-  ifneq ($(DEB_CROSS),yes)
-    ifeq ($(with_common_pkgs),yes)
-      with_fixincl	:= yes
-    endif
-  endif
-
   # libunwind -----------------
   with_internal_libunwind =
   ifeq ($(DEB_HOST_ARCH),ia64)
@@ -1415,7 +1408,6 @@ else
     with_liblsan := disabled for rtlibs stage
     with_libtsan := disabled for rtlibs stage
     with_libubsan := disabled for rtlibs stage
-    with_fixincl := disabled for rtlibs stage
     with_hppa64 := disabled for rtlibs stage
   endif
 
