@@ -1932,10 +1932,6 @@ ifeq ($(with_cdev),yes)
   include debian/rules.d/binary-cpp.mk
 endif
 
-ifeq ($(with_fixincl),yes)
-  include debian/rules.d/binary-fixincl.mk
-endif
-
 ifeq ($(with_libssp),yes)
   include debian/rules.d/binary-libssp.mk
 endif
