@@ -21,6 +21,7 @@ gcc-9 (9-20181218-1) UNRELEASED; urgency=medium
     See PR rtl-optimization/85412. Addresses: #916591.
   * Fix perl shebang for the gnathtml binary.
   * Lower priority of libgcc[124] and libstdc++6 packages.
+  * Stop building the fixincludes package, never used by lintian.
 
   [ Nicolas Boulenguez ]
   * Update Ada patches.
